# synaptic_suite2p

./: .gitignore  README.md  configurations.py  export_cellprofiler_skeletons.py  pyproject.toml  requirements.txt  setup.py  suite2p_detector_utility.py  suite2p_headless.py  syn_suite2p-req.yml  tau_sandbox.py
R_analysis/: glmm_effect_functions.R  startup_packages.R  synapse_effect_bootstraps.R
config/: analysis_params.json  config.json  default_config.yaml  user_config.yaml
example_data/: synapse_suite2p-requirements.txt
neurite_normalization/: Cell_Profiler_Projections_Dendrite_Coverage.ijm  MAX projection minus MIN projection.ijm  mask_neurons_and_skeletonize_neurites.cpproj
notebook_scripts/: run_pipeline.ipynb
src/analyze_suite2p/: analysis_utility.py  config_loader.py  detector_utility.py  export_cellprofiler_skeletons.py  networkx_functions.py  plotting_utility.py  run_suite2p.py  suite2p_detect.py  suite2p_detector_utility.py  suite2p_utility.py  syn_summary_plots.py  xs_plots.py
src/gui/: config_editor.py  ops_editor.py  run_gui.py
src/gui_config/: analysis_params.py  gui_configurations.py  jd_default_ops.py  jd_gui_extended.py  jd_gui_test.py  plotting_constants.py  run_s2p_gui.bat  run_sequence.bat  sequential_.bat  synapse_gui.py
src/gui_core/: analysis_model.py  folder_logic.py  general_settings_model.py  io.py  multivid_reg_model.py
suite2p_ops_files/: synaptic_suite2p_w_TTX.npy  synaptic_suite2p_w_TTX_multivid_reg.npy
synaptic_suite2p.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xs_code/: tau_sandbox.py
(+24 files in other folders)
